--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^14.3.0",
     "expo": "~44.0.0",
+    "expo-blur": "~11.0.0",
     "expo-status-bar": "~1.2.0",
     "firebase": "^9.6.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-elements": "^3.4.2",
+    "react-native-maps": "0.29.4",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
