--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^14.3.0",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/stack": "^6.1.1",
     "expo": "~44.0.0",
     "expo-blur": "~11.0.0",
     "expo-status-bar": "~1.2.0",
@@ -19,7 +22,11 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-maps": "0.29.4",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-web": "0.17.1"
   },
