--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "react-native-screens": "~3.10.1",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-web": "0.17.1",
-    "react-native-webview": "11.15.0"
+    "react-native-webview": "11.15.0",
+    "expo-camera": "~12.1.2",
+    "expo-permissions": "~13.1.0",
+    "expo-media-library": "~14.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
